--- a/app/views/shared/_aside.html.erb
+++ b/app/views/shared/_aside.html.erb
@@ -36,6 +36,14 @@
               <%#= fa_icon('coffee', class: "nav-icon") %>
               <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Tests</span>
             </a>
+            <a class="js-nav-tooltip-link nav-link " href="<%= group_questions_path %>" title="" data-placement="left" data-original-title="Layouts">
+              <%#= fa_icon('coffee', class: "nav-icon") %>
+              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Group Questions</span>
+            </a>
+            <a class="js-nav-tooltip-link nav-link " href="<%= questions_path %>" title="" data-placement="left" data-original-title="Layouts">
+              <%#= fa_icon('coffee', class: "nav-icon") %>
+              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Questions</span>
+            </a>
           </li>
         </ul>
       </div>
