--- a/app/views/tests/show.html.erb
+++ b/app/views/tests/show.html.erb
@@ -4,6 +4,22 @@
   <strong>Name:</strong>
   <%= @test.name %>
 </p>
+<p>
+  <strong>Description:</strong>
+  <%= @test.description %>
+</p>
+<p>
+  <strong>Duration:</strong>
+  <%= @test.duration %>
+</p>
+<p>
+  <strong>Attempt times:</strong>
+  <%= @test.attempt_times %>
+</p>
+<p>
+  <strong>Open time:</strong>
+  <%= @test.open_time %>
+</p>
 
 <%= link_to 'Edit', edit_test_path(@test) %> |
 <%= link_to 'Back', tests_path %>
