--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,43 +1,44 @@
-<div class="page-header">
-  <div class="row align-items-center mb-3">
-    <div class="col-sm mb-2 mb-sm-0">
-      <nav aria-label="breadcrumb">
-        <ol class="breadcrumb breadcrumb-no-gutter">
-<!--          <li class="breadcrumb-item"><a class="breadcrumb-link" href="<%#= root_path %>"></a></li>-->
-          <li class="breadcrumb-item active" aria-current="page">Tests</li>
-        </ol>
-      </nav>
-
-      <h1 class="page-header-title">Tests <span class="badge badge-soft-dark ml-2"><%= Test.all.size %></span></h1>
-    </div>
-    <div class="col-sm-auto">
-      <%= link_to "Add Category", new_test_path, class: "btn btn-primary" %>
-    </div>
-  </div>
-</div>
-
+<nav aria-label="breadcrumb" class="mt-3">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"><%= link_to "Trang chủ", root_path %></li>
+    <li class="breadcrumb-item active" aria-current="page"><%= "Quản lý Bài thi" %></li>
+  </ol>
+</nav>
 <div class="card">
-  <div class="table-responsive">
-    <table class="table table-borderless card-table">
-      <thead class="thead-light">
+  <h4 class="card-header">
+    Danh sách các bài thi:
+  </h4>
+  <div class="card-body">
+    <table class="table table-bordered">
+      <thead>
       <tr>
-        <th>ID</th>
+        <th>#</th>
         <th>Name</th>
-        <th colspan="3"></th>
+        <th>Difficulty</th>
+        <th>Duration</th>
+        <th>Attempt times</th>
+        <th></th>
       </tr>
       </thead>
-
       <tbody>
       <% @tests.each do |test| %>
         <tr>
-          <td><%= test.id %></td>
-          <td><%= test.name %></td>
-          <td><%= link_to 'Show', test %></td>
+          <td><%= link_to test.id, test_path(test) %></td>
+          <td><%= link_to test.name, test_path(test) %></td>
+          <td><%= test.difficulty %></td>
+          <td><%= test.duration %></td>
+          <td><%= test.attempt_times %></td>
           <td><%= link_to 'Edit', edit_test_path(test) %></td>
           <td><%= link_to 'Destroy', test, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         </tr>
       <% end %>
       </tbody>
     </table>
+
+    <br>
+
+    <%= link_to 'New Test', new_test_path %>
+    <%#= link_to  new_test_path, class: "btn btn-success" %>
+
   </div>
 </div>
