--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -62,6 +62,13 @@
         </div>
       </div>
 
+      <div class="form-group row">
+        <%= form.label "Danh mục", class: 'col-sm-2 col-form-label input-label' %>
+        <div class="col-lg-10">
+          <%= form.select :category_ids, options_for_select(Category.all.collect{|category| [category.name, category.id]}, @test.categories.present? ? @test.categories.collect(&:id) : ""), {include_blank: "-- Vui lòng chọn danh mục --"}, {class: "form-control select2", :multiple => true} %>
+        </div>
+      </div>
+
 
       <div class="d-flex justify-content-end">
         <%= form.submit "Save changes", class: "btn btn-primary" %>
@@ -69,3 +76,4 @@
     </div>
   </div>
 <% end %>
+
