--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,6 @@
 // app/javascript/stylesheets/application.scss
 //@import '~bootstrap/scss/bootstrap';
 @import "theme_admin";
+@import "~trix/dist/trix";
 
 
