--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -24,7 +24,7 @@
       <div class="row form-group">
         <%= form.label :Description, class: "col-sm-2 col-form-label input-label" %>
         <div class="col-sm-10">
-          <%= form.text_area :description, class: "form-control", placeholder: "Please input description", required: true %>
+          <%= form.rich_text_area :description, class: "", placeholder: "Please input description", required: true %>
         </div>
       </div>
 
@@ -45,20 +45,20 @@
       <div class="row form-group">
         <%= form.label "Open time", class: "col-sm-2 col-form-label input-label" %>
         <div class="col-sm-10">
-          <%= form.datetime_select :open_time, class: "form-control" %>
+          <%= form.datetime_local_field :open_time, class: "form-control" %>
         </div>
       </div>
 
       <div class="row form-group">
         <%= form.label "Close time", class: "col-sm-2 col-form-label input-label" %>
         <div class="col-sm-10">
-          <%= form.datetime_select :close_time, class: "form-control" %>
+          <%= form.datetime_local_field :close_time, class: "form-control" %>
         </div>
       </div>
       <div class="row form-group">
         <%= form.label "Release time", class: "col-sm-2 col-form-label input-label" %>
         <div class="col-sm-10">
-          <%= form.datetime_select :release_time, class: "form-control" %>
+          <%= form.datetime_local_field :release_time, class: "form-control" %>
         </div>
       </div>
 
