--- a/app/views/shared/_aside.html.erb
+++ b/app/views/shared/_aside.html.erb
@@ -38,14 +38,14 @@
               <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Tests</span>
             </a>
 
-            <a class="js-nav-tooltip-link nav-link " href="<%= group_questions_path %>" title="" data-placement="left" data-original-title="Layouts">
+<!--            <a class="js-nav-tooltip-link nav-link " href="<%#= group_questions_path %>" title="" data-placement="left" data-original-title="Layouts">-->
               <%#= fa_icon('coffee', class: "nav-icon") %>
-              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Group Questions</span>
-            </a>
+<!--              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Group Questions</span>-->
+<!--            </a>-->
 
-            <a class="js-nav-tooltip-link nav-link " href="<%= questions_path %>" title="" data-placement="left" data-original-title="Layouts">
+<!--            <a class="js-nav-tooltip-link nav-link " href="<%#= questions_path %>" title="" data-placement="left" data-original-title="Layouts">-->
               <%#= fa_icon('coffee', class: "nav-icon") %>
-              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Questions</span>
+<!--              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Questions</span>-->
             </a>
 
             <a class="js-nav-tooltip-link nav-link " href="<%= group_categories_path %>" title="" data-placement="left" data-original-title="Layouts">
