--- a/app/views/group_questions/_form.html.erb
+++ b/app/views/group_questions/_form.html.erb
@@ -11,6 +11,13 @@
     </div>
   <% end %>
 
+  <% test_id = params[:test_id] %>
+  <% test_id = group_question.test.id if group_question.test.present? %>
+  <%= form.hidden_field :test_id, value: test_id if test_id.present? %>
+
+  <% parent_id = params[:parent_id] %>
+  <%= form.hidden_field :parent_id, value: parent_id if parent_id.present? %>
+
   <div class="card">
     <div class="card-body">
 
@@ -24,7 +31,7 @@
       <div class="row form-group">
         <%= form.label :Description, class: "col-sm-2 col-form-label input-label" %>
         <div class="col-sm-10">
-          <%= form.text_area :description, class: "form-control", placeholder: "Please input description", required: true %>
+          <%= form.text_area :description, class: "form-control action-text", placeholder: "Please input description", required: true %>
         </div>
       </div>
       <div class="form-group row">
@@ -48,12 +55,7 @@
         </div>
       </div>
 
-      <div class="row form-group">
-        <%= form.label :Test, class: "col-sm-2 col-form-label input-label" %>
-        <div class="col-sm-10">
-          <%= form.select :test_id, options_for_select(Test.all.collect{|a| [a.name, a.id]}, @group_question.test.present? ? @group_question.test.id : ""), {include_blank: "-- Please select test --"}, {class: "form-control", required: true} %>
-        </div>
-      </div>
+
 
 
       <div class="d-flex justify-content-end">
@@ -62,3 +64,9 @@
     </div>
   </div>
 <% end %>
+
+<style>
+    .action-text {
+        min-height: 400px;
+    }
+</style>
