--- a/app/views/shared/_aside.html.erb
+++ b/app/views/shared/_aside.html.erb
@@ -35,7 +35,7 @@
 
             <a class="js-nav-tooltip-link nav-link " href="<%= tests_path %>" title="" data-placement="left" data-original-title="Layouts">
               <%#= fa_icon('coffee', class: "nav-icon") %>
-              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Tests</span>
+              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Bài Thi</span>
             </a>
 
 <!--            <a class="js-nav-tooltip-link nav-link " href="<%#= group_questions_path %>" title="" data-placement="left" data-original-title="Layouts">-->
@@ -50,7 +50,7 @@
 
             <a class="js-nav-tooltip-link nav-link " href="<%= group_categories_path %>" title="" data-placement="left" data-original-title="Layouts">
               <%#= fa_icon('coffee', class: "nav-icon") %>
-              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Group Categories</span>
+              <span class="navbar-vertical-aside-mini-mode-hidden-elements text-truncate">Nhóm Danh Mục</span>
             </a>
 
           </li>
