--- a/app/views/group_questions/_form.html.erb
+++ b/app/views/group_questions/_form.html.erb
@@ -59,7 +59,7 @@
 
 
       <div class="d-flex justify-content-end">
-        <%= form.submit "Save changes", class: "btn btn-primary" %>
+        <%= form.submit "Tạo nhóm Câu Hỏi", class: "btn btn-primary" %>
       </div>
     </div>
   </div>
