--- a/app/views/group_questions/show.html.erb
+++ b/app/views/group_questions/show.html.erb
@@ -4,9 +4,11 @@
     <li class="breadcrumb-item"><%= link_to "Quản lý Bài thi", tests_path %></li>
     <% if @group_question.test.present? %>
       <li class="breadcrumb-item"><%= link_to @group_question.test.name, test_path(@group_question.test.id) %></li>
+<!--      <li class="breadcrumb-item"><%#= link_to @group_question.category.name, test_path(@group_question.test.id) %></li>-->
       <li class="breadcrumb-item active" aria-current="page"><%= @group_question.name %></li>
     <% elsif @group_question.parent.present? %>
       <li class="breadcrumb-item"><%= link_to @group_question.parent.test.name, test_path(@group_question.parent.test.id) %></li>
+<!--      <li class="breadcrumb-item"><%#= link_to @group_question.parent.category.name, admin_test_path(@group_question.parent.test_part.test.id) %></li>-->
       <li class="breadcrumb-item"><%= link_to @group_question.parent.name, group_question_path(@group_question.parent.id) %></li>
       <li class="breadcrumb-item active" aria-current="page"><%= @group_question.id %></li>
     <% else %>
@@ -47,20 +49,20 @@
   </div>
 
   <div class="m-3">
-    <%# if @group_question.children.present? %>
-<!--      Sub Group Question List-->
+    <% if @group_question.children.present? %>
+      Sub Group Question List
 
-      <%# @group_question.children.each do |sub_group_question| %>
-<!--        <div>-->
-          <%#= link_to "##{sub_group_question.id}", group_question_path(sub_group_question) %>
-<!--        </div>-->
-      <%# end %>
-    <%# else %>
+      <% @group_question.children.each do |sub_group_question| %>
+        <div>
+          <%= link_to "##{sub_group_question.id}", group_question_path(sub_group_question) %>
+        </div>
+      <% end %>
+    <% else %>
       <% @group_question.questions.each do |question| %>
         <div class="m-2">
           <span class="font-weight-bold" style="color: #B00100">Question <%= question.question_number %></span>
           <span class="float-right">
-            <small><%= link_to "Sửa câu hỏi",  edit_question_path(question), remote: true %></small>
+            <small><%= link_to  "Sửa câu hỏi", edit_question_path(question), remote: true %></small>
             <small><%= link_to "Xóa câu hỏi", question_path(question), method: :delete, data: { confirm: 'Are you sure?' } %></small>
           </span>
         </div>
@@ -74,10 +76,10 @@
           <% end %>
         </div>
       <% end %>
-    <%# end %>
+    <% end %>
   </div>
   <div class="m-3">
     <%= link_to "Thêm câu hỏi", new_question_path(group_question_id: @group_question.id), class: 'btn btn-success', remote: true %>
-    <%= link_to "Thêm nhóm câu hỏi con", new_group_question_path(parent_id: @group_question.id), class: 'btn btn-success' %>
+    <%= link_to  "Thêm nhóm câu hỏi con", new_group_question_path(parent_id: @group_question.id), class: 'btn btn-success' %>
   </div>
 </div>
