--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -10,7 +10,9 @@
       </ul>
     </div>
   <% end %>
-
+  <% if !@question.persisted? %>
+    <%= form.hidden_field :group_question_id, value: params[:group_question_id] %>
+  <% end %>
 
   <div class="card">
     <div class="card-body">
