--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -23,23 +23,32 @@
       </div>
 
       <div class="form-group">
-        <%= form.label :content %>
-        <%= form.text_area :content, class: "form-control form-control-sm", placeholder: "Enter content of this question" %>
+        <%= form.label :name %>
+        <%= form.text_area :name, class: "form-control form-control-sm", placeholder: "Enter content of this question" %>
       </div>
 
-      <div>Question Option</div>
-      <div class="form-group">
-        <table class="table table-bordered">
-          <%= form.fields_for :question_options do |option| %>
-            <tr>
-              <td><%= option.text_field :content, class: "form-control form-control-sm", placeholder: "Enter content of this option" %></td>
-              <td>
-                <%= option.radio_button :is_answer, 'is_answer', id: "option_#{option.index}", class: "form-control", :checked => option.object.present? && option.object.is_answer? %>
-              </td>
-            </tr>
-          <% end %>
-        </table>
+      <div class="row form-group">
+        <%= form.label :question_type, class: "col-sm-2 col-form-label input-label" %>
+        <div class="col-sm-10">
+          <%= form.select :question_type, options_for_select(Question.question_types.keys.to_a.collect{|type| [type.humanize, type]}), {prompt: "-- Select a question type --"}, class: "form-control", required: true %>
+        </div>
       </div>
+
+<!--      <div>Question Option</div>-->
+<!--      <div class="form-group">-->
+<!--        <table class="table table-bordered">-->
+          <%#= form.fields_for :question_options do |option| %>
+<!--            <tr>-->
+<!--              <td>-->
+                <%#= option.text_field :content, class: "form-control form-control-sm", placeholder: "Enter content of this option" %>
+<!--              </td>-->
+<!--              <td>-->
+                <%#= option.radio_button :is_answer, 'is_answer', id: "option_#{option.index}", class: "form-control", :checked => option.object.present? && option.object.is_answer? %>
+<!--              </td>-->
+<!--            </tr>-->
+          <%# end %>
+<!--        </table>-->
+<!--      </div>-->
 
       <div class="form-group">
         <%= form.label :explanation %>
