--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Question</h1>
 
-<%= render 'form', question: @question %>
+<%= render 'questions/form_edit', question: @question %>
 
 <%= link_to 'Show', @question %> |
 <%= link_to 'Back', questions_path %>
